# libKasnerik

./: .gitignore  CMakeLists.txt  README.md
src/Injector/: main.cpp
src/Lib/: dllmain.cpp
